--- a/.config.json
+++ b/.config.json
@@ -1,29 +1,21 @@
 {
-	"debug":1,
 	"infra":{
-		"testips":["127.0.0.1"],
+		"test":["127.0.0.1"],
+		"debug":["127.0.0.1"],
 		"fscharset":"UTF-8",
 		"cache":"fs"
 	},
 	"admin":{
-		"pub":["popup"],
-		"popup":true,
 		"login":"some",
 		"password":"som",
 		"email":"info@itlf.ru",
-		"support":"aky.pp.ru@gmail.com",
-		"from":""
-	},
-	"/http":{
-		"sitehost":"",
-		"siteroot":"",
-		"honeydomains":["localhost","127.0.0.1"]
+		"support":"aky.pp.ru@gmail.com"
 	},
 	"memcache":{
 		"host":"127.0.0.1",
 		"port":"11211"
 	},
-	"/mysql":{
+	"mysql":{
 		"user":"some",
 		"host":"host",
 		"database":"some",
