--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,7 @@
 {
-	"name": "itlife/infra",
-	"description": "plugin for infrajs",
+	"name": "infrajs/infra",
 	"license": "GPL3",
-	"authors": [{
-		"name": "itlife",
-		"email": "info@itlife-studio.ru"
-	}],
 	"autoload": {
-		"psr-4": { "itlife\\infra\\": "/" }
+		"psr-4": { "infrajs\\infra\\": "/" }
 	}
 }
