--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,9 @@
 	"license": "GPL3",
 	"autoload": {
 		"psr-4": { "infrajs\\infra\\": "/" }
+	},
+	"require":{
+		"components/jquery": "~2",
+		"twbs/bootstrap": "~3"
 	}
 }
