--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
 		"infrajs/cache":"~1",
 		"infrajs/path":"~1",
 		"infrajs/view":"~1",
-		"infrajs/ans":"~1"
+		"infrajs/ans":"~1",
+		"infrajs/config":"~1",
+		"infrajs/update":"~1"
 
 	}
 }
